--- a/docs/style.css
+++ b/docs/style.css
@@ -63,6 +63,7 @@ p {
     max-width: fit-content;
     font-family: Arial;
     display: inline-block;
+    max-width: 500px;
 }
 
 .song_container{
