--- a/django/docs/style.css
+++ b/django/docs/style.css
@@ -26,6 +26,16 @@
     width:100px
   }
   
+.pdf_button{
+    padding:5px;
+    text-align:center;
+}
+
+.pdf_button::after{
+    font-family:  Helvetica, sans-serif,Arial;
+    content: "🗏";
+}
+
 .control_button:hover {
     background-color: #e6e6e6; /* Green */
     color: black;
@@ -47,18 +57,32 @@
     justify-content: flex-end;
 }
 
-#change {
+.trans_control {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: clip;
+}
+
+.back_span{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#edit {
+    font-family: Arial, Helvetica, sans-serif;
     text-decoration: none;
     display: inline-block;
+    padding: 16px;
     border-radius: 4px;
     border: 2px solid #d6d6d6;
     color: black;
     text-align: center;
+    width: 50px;
+    height: 26px;
+    transition: all 0.5s;
     font-size: 20px;
-    width: 80px;
     cursor: pointer;
-    height:60px;
-    margin-left: 10px;
+    position: relative;
+    margin-right: 10px;
   }
 
 
@@ -133,6 +157,8 @@ a {
     text-align: left;
     transition: 0.5s;
     border-bottom: 2px solid #f6f6f6;
+    display: flex;
+    justify-content: space-between;
 }
 
 .song_ref:hover {
@@ -155,10 +181,8 @@ a {
     margin:auto;
 }
 
-.owner {
+.song_ref .owner {
     font-family: 'Comic Sans MS';
-    text-align: right;
-    float: right;
     color: #a6a6a6;
 }
 
