--- a/docs/style.css
+++ b/docs/style.css
@@ -22,7 +22,7 @@
     background-color: white;
     color: #363636;
     border-radius: 2px;
-    border: 2px solid #d6d6d6; /* Green */
+    border: 2px solid #d6d6d6;
     width:100px
   }
   
