--- a/django/docs/style.css
+++ b/django/docs/style.css
@@ -37,10 +37,13 @@
 }
 
 #control {
-    overflow: hidden; /* add this to contain floated children */
-    display: flex;
+    overflow: hidden;
+    display: grid;
+    grid-auto-flow: column;
     justify-content: space-between;
+    grid-column-gap: 10px;
 }
+
 #trans_control {
     text-align: center;
     display: flex;
@@ -213,15 +216,39 @@ a {
     display: flex;
     justify-content: center;
     margin-left: 20px;
-    margin-right: 20px;
+    margin-right: max(-3%,-10px);
     
 }
 
 .song_container{
     column-width: 500px;
-    column-count: 2;
-    column-fill: auto;
-    max-width: 1020px;
-
 }
 
+@media (min-width: 1600px) {
+  
+    .song_container{
+        column-count: 3;
+    }
+    .song_container:not(:has(> :nth-child(7))) {
+        column-count: 2;
+      }
+    
+}
+
+@media (max-width: 1600px) {
+    .song_container {
+      column-count: 2;
+    }
+  }
+
+/* reduce column count to 1 if the screen is too narrow */
+@media (max-width: 1100px) {
+  .song_container {
+    column-count: 1;
+  }
+}
+
+/* reduce number of columns to 1 if there are less than 3 verses */
+.song_container:not(:has(> :nth-child(3))) {
+    column-count: 1;
+}
