Added author labels

--- a/django/docs/style.css
+++ b/django/docs/style.css
@@ -166,8 +166,11 @@ a {
     text-align: left;
     transition: 0.5s;
     border-bottom: 2px solid #f6f6f6;
-    display: flex;
-    justify-content: space-between;
+    display:grid;
+    grid-template-areas:
+    "name owner"
+    "author owner";
+    grid-template-columns: auto 30px;
 }
 
 .song_ref:hover {
@@ -193,6 +196,21 @@ a {
 .song_ref .owner {
     font-family: 'Comic Sans MS';
     color: #a6a6a6;
+    grid-area: owner;
+    align-self: center;
+}
+
+.song_ref .song_name {
+    grid-area: name;
+    align-self: center;
+}
+
+.song_ref .song_author {
+    grid-area: author;
+    color: #BBBBBB;
+    font-style: italic;
+    font-size: small;
+    align-self: center;
 }
 
 .chorus {
